# cool-python

./:  set_timezone.sh  .gitignore  README.md  build_wa_chats.py  calculate_id.py  classes.py  epoch_cocoa_converter.py  epoch_cocoa_converter_update.py  fastapi_items.py  generate_elasticsearch_data.py  main.py  main_click.py  main_consecutive.py  main_enum_ts_to_python.py  main_fast_api.py  main_fastapi.py  main_flask.py  main_flight_info.py  main_garmin.py  main_git_games.py  main_medium.py  main_patagonia.py  main_pdf_remove_password.py  main_playwright.py  main_qr_wifi.py  main_rename_dir_filename.py  main_video_transcript.py  main_wechat.py  requirements.txt  test_fixture.py  test_main.py  test_new.py
logging_stuff/: logging_example.py
utils/: first_util.py  main_utils.py
wc/: chat_builder.py  wc_backup_parser.py  wc_db.py
wechat_flat_project/: mockgen.py  requirements.txt  wechat_dump.py
wechat_flat_project/tests/: test_full.py
wechat_utils_release/: pyproject.toml  recent.json
wechat_utils_release/src/wechat_utils/: __init__.py  _helpers.py  dump.py  mockgen.py
wechat_utils_release/src/wechat_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wechat_utils_release/tests/: test_basic.py
yad2/: README.md  main_yad2.py
